k8s/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: northwind-logistics
  labels:
    app: northwind-logistics

spec:
  replicas: 2
  revisionHistoryLimit: 3

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: northwind-logistics

  template:
    metadata:
      labels:
        app: northwind-logistics

    spec:
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 30

      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001
        seccompProfile:
          type: RuntimeDefault

      containers:
        - name: northwind-logistics
          image: ghcr.io/yemane1426/northwind-logistics:latest
          imagePullPolicy: IfNotPresent
          workingDir: /app

          ports:
            - name: http
              containerPort: 8000
              protocol: TCP

          startupProbe:
            httpGet:
              path: /health
              port: http
            failureThreshold: 12
            periodSeconds: 5
            timeoutSeconds: 2

          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 2
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3

          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "250m"
              memory: "128Mi"

          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
