k8s/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: northwind-logistics-service
  labels:
    app: northwind-logistics

spec:
  type: NodePort

  selector:
    app: northwind-logistics

  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: http
      nodePort: 30080
